--- a/index.html
+++ b/index.html
@@ -26,6 +26,194 @@
       </div>
     </div>
   </nav>
+  <br><br><br><br><br><br><br>
+  <h2 id="a2">Popular Cuisines</h2>
+  <div id="a1">
+
+    <div class="a3">
+      <h3>Indian</h3>
+      <br>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+    </div>
+    <div class="a3">
+      <h3>Italian</h3>
+      <br>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+    </div>
+    <div class="a3">
+      <h3>Chinese</h3>
+      <br>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+    </div>
+    <div class="a3">
+      <h3>Thai</h3>
+      <br>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+    </div>
+  </div>
+  <br>
+  <section id="price">
+    <div class="pic" id="p1"></div>
+    <div class="pic" id="p2"></div>
+    <div class="pic" id="p3"></div>
+  </section>
+  <form action="/order.html">
+    <h2>Place Your Order : </h2>
+    <br><br>
+
+    <!--PERSONAL INFORMATION -->
+    <div class="order"> Personal Information
+      <br>
+      <label> First Name:</label> <input type="text" name="fname" size=25 />&nbsp;&nbsp;
+      <label>Last Name:</label> <input type="text" name="lname" size=25 />&nbsp;&nbsp;
+      <label>Mobile #:</label> <input type="text" name="mobile" size=25 />&nbsp;&nbsp;
+      <label>Address: <textarea col=70 rows=1 name="address"></textarea></label>
+      <br><br>
+    </div>
+
+    <div class="order">
+      <!--ORDER DETAILS -->
+      Order Details
+      <br>
+      <select name="size">
+        <option>Select Pizza Size</option>
+        <option value="1">Small</option>
+        <option value="2">Medium</option>
+        <option value="3">Large</option>
+        <option value="4">Family</option>
+      </select>&nbsp;&nbsp;&nbsp;
+      <select name="Quantity">
+        <option>Select Quantity</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+      </select>&nbsp;&nbsp;&nbsp;
+      <label>Delivery Date:</label><input type="date" name="date" />&nbsp;&nbsp;&nbsp;
+      <label>Delivery Time:</label><input type="time" name="time" />&nbsp;&nbsp;&nbsp;
+      <select name="payment">
+        <option>Select Payment Option</option>
+        <option value="1">Easy Paisa</option>
+        <option value="2">Mobicash</option>
+        <option value="3">Bank Transfer</option>
+        <option value="4">Cash on Delivery</option>
+      </select>
+
+      <br><br>
+    </div>
+
+
+    <!--CHEESES -->
+    <div class="order">
+      CHEESES
+      <br>
+      <input type="radio" name="cheese" value="1" />Mozzarella&nbsp;&nbsp;
+      <input type="radio" name="cheese" value="2" />Reduced Fat&nbsp;&nbsp;
+      <input type="radio" name="cheese" value="3" />Feta&nbsp;&nbsp;
+      <input type="radio" name="cheese" value="4" />provolone&nbsp;&nbsp;
+      <input type="radio" name="cheese" value="5" />cheddar&nbsp;&nbsp;
+      <input type="radio" name="cheese" value="6" />Parmesan
+
+      <br><br>
+    </div>
+    <div class="order">
+      <!--SAUCES -->
+      SAUCES
+      <br>
+      <input type="radio" name="sauce" value="1" />Pizza Sauce&nbsp;&nbsp;
+      <input type="radio" name="sauce" value="2" />BBQ Sauce&nbsp;&nbsp;
+      <input type="radio" name="sauce" value="3" />Garlic Sauce&nbsp;&nbsp;
+      <input type="radio" name="sauce" value="4" />Pesto&nbsp;&nbsp;
+      <input type="radio" name="sauce" value="5" />Garlic Ranch Sauce&nbsp;&nbsp;
+      <input type="radio" name="sauce" value="6" />Creamy Bechamel sauce&nbsp;&nbsp;
+      <input type="radio" name="sauce" value="7" />Hummus&nbsp;&nbsp;
+      <input type="radio" name="sauce" value="8" />Buffalo Sauce&nbsp;&nbsp;
+
+      <br><br>
+    </div>
+    <div class="order">
+      <!--COLD DRINKS -->
+
+      Cold Drink
+      <br>
+      <input type="radio" name="drink" value="1" />Coke&nbsp;&nbsp;
+      <input type="radio" name="drink" value="2" />Pepsi&nbsp;&nbsp;
+      <input type="radio" name="drink" value="3" />7UP&nbsp;&nbsp;
+      <input type="radio" name="drink" value="4" />DEW&nbsp;&nbsp;
+      <input type="radio" name="drink" value="5" />Fanta&nbsp;&nbsp;
+      <input type="radio" name="drink" value="6" />Mirinda&nbsp;&nbsp;
+      <input type="radio" name="drink" value="7" />Sprite
+      <br><br>
+    </div>
+    <div class="order">
+      <!--TOPINGS -->
+
+
+      Choose Toppings - Rs.100 Each
+      <br>
+
+      <input type="checkbox" name="topping" value="1" /> Anchovies&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="2" /> Chicken&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="4" /> Pepperoni&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="5" /> Salami&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="6" /> Sausage&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="7" /> Broccoli&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="8" /> Green Olives&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="9" /> Green Peppers&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="10" /> Mushrooms&nbsp;&nbsp;
+      <input type="checkbox" name="topping" value="11" /> Red Onions
+
+
+      <br><br>
+    </div>
+    <div class="order">
+      <!--SPECIAL INSTRUCTIONS -->
+
+
+      Special instructions&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delivery Address
+      <br>
+      <textarea name="instructions" rows="4" cols="42"></textarea>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <textarea name="instructions" rows="4" cols="42"></textarea>
+
+    </div>
+    <div><br>
+      <input type="submit" value="PLACE YOUR ORDER" />
+      <input type="reset" value="START OVER" />
+    </div>
+
+
+    </div>
+    <br>
+  </form>
+  <div id="reviewbar">
+    <p id="rev">REVIEW</p>
+    <div class="review" id="r1">
+      <p class="name">Sanu Kumar</p>
+      <br>
+      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea quo minus
+        suscipit quas ab eveniet eligendi.</p>
+    </div>
+    <div class="review" id="r2">
+      <p class="name">Ayush Thakur</p>
+      <br>
+      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea q
+        class="says"uo minus suscipit quas ab eveniet eligendi.</p>
+    </div>
+    <div class="review" id="r1">
+      <p class="name">Aman Baba Dear</p>
+      <br>
+      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea quo minus
+        suscipit quas ab eveniet eligendi.</p>
+    </div>
+    <div class="review" id="r2">
+      <p class="name">Manish Pandey</p>
+      <br>
+      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea quo minus
+        suscipit quas ab eveniet eligendi.</p>
+    </div>
+  </div>
+  </details>
   <footer>
     <div class="container">
       <div class="sec aboutus">
@@ -61,7 +249,8 @@
           <li>
             <span><i class="fa fa-phone" aria-hidden="true"></i></span>&nbsp
             <p><a href="tel:12345678900">+91 9876543210</a><br>
-            <a href="tel:12345678900">+91 1234567890</a></p>
+              <a href="tel:12345678900">+91 1234567890</a>
+            </p>
           </li>
           <li>
             <span><i class="fa fa-envelope" aria-hidden="true"></i></span>&nbsp
