--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bakery</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
     integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,202 +24,196 @@
     <div class="inner-width">
       <a href="#" class="logo">Algo Pizza</a>
       <div class="navbar-menu">
-        <a href="#">home</a>
-        <a href="#">about</a>
-        <a href="#">menu</a>
-        <a href="#">gallery</a>
-        <a href="#">contact</a>
+        <a href="#scroll1">home</a>
+        <a href="#scroll2">offers</a>
+        <a href="#scroll3">menu</a>
+        <a href="#scroll4">Reviews</a>
+        <a href="#scroll5">contact</a>
       </div>
     </div>
   </nav>
-  <br><br><br><br><br><br><br>
-  <h2 id="a2">Popular Cuisines</h2>
-  <div id="a1">
+  <br id="scroll1"><br><br><br>
+  <div class="main">
+    <div id='hungry'>
+      <h1>Feeling Hungry ?</h1>
+      <br>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, tempora!</p>
+      <div id="main_order">Order Online</div>
+    </div>
+    <div id='main_img'></div>
 
+  </div>
+  <br id="scroll2">
+  <h2 id="a2">Trending Offers</h2>
+  <div id="offer">
+    <div id="offer1">
+
+    </div>
+    <div id="offer2">
+
+    </div>
+  </div>
+  <br id="scroll3">
+  <h2 id="a2">Popular Veggies</h2>
+  <div id="a1">
     <div class="a3">
-      <h3>Indian</h3>
-      <br>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+      <div id="veg_1" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Tandoori Paneer</h3>
+        <br>
+        <p>Spiced paneer, Onion, Green Capsicum & Red Paprika in Tandoori Sauce</p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹529</p>
+      </div>
     </div>
     <div class="a3">
-      <h3>Italian</h3>
-      <br>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+      <div id="veg_2" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Veggie Supreme</h3>
+        <br>
+        <p>Black Olives, Green Capsicum, Mushroom, Onion, Red Paprika, Sweet Corn
+        </p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹499</p>
+      </div>
     </div>
     <div class="a3">
-      <h3>Chinese</h3>
-      <br>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+      <div id="veg_3" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Momo Mia Pizza-Veg</h3>
+        <br>
+        <p>Epic combination of signature pan crust, delicious paneer & veg momos topped with spicy Schezwan sauce,
+          onion, capsicum, sweet corn & 100% mozzarella</p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹449</p>
+      </div>
     </div>
     <div class="a3">
-      <h3>Thai</h3>
-      <br>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea delectus est, fuga deleniti sequi officiis.</p>
+      <div id="veg_4" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Veg Kebab Surprise</h3>
+        <br>
+        <p>Veg Kebab, Onion, Green Capsicum, Tomato & Sweet Corn in Tandoori Sauce</p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹529</p>
+      </div>
+    </div>
+    <div id="side1">
+      V&nbsp;E&nbsp;G
     </div>
   </div>
   <br>
-  <section id="price">
-    <div class="pic" id="p1"></div>
-    <div class="pic" id="p2"></div>
-    <div class="pic" id="p3"></div>
-  </section>
-  <form action="/order.html">
-    <h2>Place Your Order : </h2>
-    <br><br>
-
-    <!--PERSONAL INFORMATION -->
-    <div class="order"> Personal Information
-      <br>
-      <label> First Name:</label> <input type="text" name="fname" size=25 />&nbsp;&nbsp;
-      <label>Last Name:</label> <input type="text" name="lname" size=25 />&nbsp;&nbsp;
-      <label>Mobile #:</label> <input type="text" name="mobile" size=25 />&nbsp;&nbsp;
-      <label>Address: <textarea col=70 rows=1 name="address"></textarea></label>
-      <br><br>
+  <h2 id="a2">Popular Non-Veggies</h2>
+  <div id="non_veg">
+    <div class="a3">
+      <div id="nveg_1" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Triple Chicken Feast</h3>
+        <br>
+        <p>Schezwan Chicken Meatball, Herbed Chicken, Chicken Sausage, Green Capsicum, Onion, Red Paprika</p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹629</p>
+      </div>
     </div>
-
-    <div class="order">
-      <!--ORDER DETAILS -->
-      Order Details
-      <br>
-      <select name="size">
-        <option>Select Pizza Size</option>
-        <option value="1">Small</option>
-        <option value="2">Medium</option>
-        <option value="3">Large</option>
-        <option value="4">Family</option>
-      </select>&nbsp;&nbsp;&nbsp;
-      <select name="Quantity">
-        <option>Select Quantity</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-      </select>&nbsp;&nbsp;&nbsp;
-      <label>Delivery Date:</label><input type="date" name="date" />&nbsp;&nbsp;&nbsp;
-      <label>Delivery Time:</label><input type="time" name="time" />&nbsp;&nbsp;&nbsp;
-      <select name="payment">
-        <option>Select Payment Option</option>
-        <option value="1">Easy Paisa</option>
-        <option value="2">Mobicash</option>
-        <option value="3">Bank Transfer</option>
-        <option value="4">Cash on Delivery</option>
-      </select>
-
-      <br><br>
+    <div class="a3">
+      <div id="nveg_2" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Chicken Tikka Supreme</h3>
+        <br>
+        <p>Chicken Tikka, Chicken Malai Tikka, Onion, Red Paprika
+        </p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹629</p>
+      </div>
     </div>
-
-
-    <!--CHEESES -->
-    <div class="order">
-      CHEESES
-      <br>
-      <input type="radio" name="cheese" value="1" />Mozzarella&nbsp;&nbsp;
-      <input type="radio" name="cheese" value="2" />Reduced Fat&nbsp;&nbsp;
-      <input type="radio" name="cheese" value="3" />Feta&nbsp;&nbsp;
-      <input type="radio" name="cheese" value="4" />provolone&nbsp;&nbsp;
-      <input type="radio" name="cheese" value="5" />cheddar&nbsp;&nbsp;
-      <input type="radio" name="cheese" value="6" />Parmesan
-
-      <br><br>
+    <div class="a3">
+      <div id="nveg_3" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Chicken Pepper Crunch</h3>
+        <br>
+        <p>Herbed Chicken, Onion, Green Capsicum, Red Capsicum</p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹569</p>
+      </div>
     </div>
-    <div class="order">
-      <!--SAUCES -->
-      SAUCES
-      <br>
-      <input type="radio" name="sauce" value="1" />Pizza Sauce&nbsp;&nbsp;
-      <input type="radio" name="sauce" value="2" />BBQ Sauce&nbsp;&nbsp;
-      <input type="radio" name="sauce" value="3" />Garlic Sauce&nbsp;&nbsp;
-      <input type="radio" name="sauce" value="4" />Pesto&nbsp;&nbsp;
-      <input type="radio" name="sauce" value="5" />Garlic Ranch Sauce&nbsp;&nbsp;
-      <input type="radio" name="sauce" value="6" />Creamy Bechamel sauce&nbsp;&nbsp;
-      <input type="radio" name="sauce" value="7" />Hummus&nbsp;&nbsp;
-      <input type="radio" name="sauce" value="8" />Buffalo Sauce&nbsp;&nbsp;
-
-      <br><br>
+    <div class="a3">
+      <div id="nveg_4" class="veg_pic"></div>
+      <div class="veg_des">
+        <h3>Momo Mia Pizza-Non Veg</h3>
+        <br>
+        <p>Epic combination of signature pan crust, delicious chicken momos topped with spicy Schezwan sauce, Schezwan
+          meatballs, onion, capsicum & 100% mozzarella</p>
+      </div>
+      <div class="veg_price">
+        <p class="add">ADD</p>
+        <p class="rs">₹499</p>
+      </div>
     </div>
-    <div class="order">
-      <!--COLD DRINKS -->
-
-      Cold Drink
-      <br>
-      <input type="radio" name="drink" value="1" />Coke&nbsp;&nbsp;
-      <input type="radio" name="drink" value="2" />Pepsi&nbsp;&nbsp;
-      <input type="radio" name="drink" value="3" />7UP&nbsp;&nbsp;
-      <input type="radio" name="drink" value="4" />DEW&nbsp;&nbsp;
-      <input type="radio" name="drink" value="5" />Fanta&nbsp;&nbsp;
-      <input type="radio" name="drink" value="6" />Mirinda&nbsp;&nbsp;
-      <input type="radio" name="drink" value="7" />Sprite
-      <br><br>
+    <div id="side2">
+      N&nbsp;O&nbsp;N&nbsp;-&nbsp;V&nbsp;E&nbsp;G
     </div>
-    <div class="order">
-      <!--TOPINGS -->
-
-
-      Choose Toppings - Rs.100 Each
-      <br>
-
-      <input type="checkbox" name="topping" value="1" /> Anchovies&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="2" /> Chicken&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="4" /> Pepperoni&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="5" /> Salami&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="6" /> Sausage&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="7" /> Broccoli&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="8" /> Green Olives&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="9" /> Green Peppers&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="10" /> Mushrooms&nbsp;&nbsp;
-      <input type="checkbox" name="topping" value="11" /> Red Onions
-
-
-      <br><br>
+  </div>
+  <br id="scroll4">
+  <h2 id="a2">Reviews</h2>
+  <div id="reviewbar">
+    <div class="review" id="r1">
+      <div class="rev_des">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In tempore quod reiciendis eius dolorum quisquam minus
+        sapiente sint ipsum harum!
+      </div>
+      <div class="customer">
+        <p>Reyna</p>
+        <img src="./P1.png" alt="">
+      </div>
     </div>
-    <div class="order">
-      <!--SPECIAL INSTRUCTIONS -->
-
-
-      Special instructions&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delivery Address
-      <br>
-      <textarea name="instructions" rows="4" cols="42"></textarea>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <textarea name="instructions" rows="4" cols="42"></textarea>
-
+    <div class="review" id="r2">
+      <div class="rev_des">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In tempore quod reiciendis eius dolorum quisquam minus
+        sapiente sint ipsum harum!
+      </div>
+      <div class="customer">
+        <p>Sova</p>
+        <img src="./p2.png" alt="">
+      </div>
     </div>
-    <div><br>
-      <input type="submit" value="PLACE YOUR ORDER" />
-      <input type="reset" value="START OVER" />
-    </div>
-
-
+    <div class="review" id="r3">
+      <div class="rev_des">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In tempore quod reiciendis eius dolorum quisquam minus
+        sapiente sint ipsum harum!
+      </div>
+      <div class="customer">
+        <p>Cypher</p>
+        <img src="./p3.png" alt="">
+      </div>
     </div>
     <br>
-  </form>
-  <div id="reviewbar">
-    <p id="rev">REVIEW</p>
-    <div class="review" id="r1">
-      <p class="name">Sanu Kumar</p>
-      <br>
-      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea quo minus
-        suscipit quas ab eveniet eligendi.</p>
-    </div>
-    <div class="review" id="r2">
-      <p class="name">Ayush Thakur</p>
-      <br>
-      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea q
-        class="says"uo minus suscipit quas ab eveniet eligendi.</p>
-    </div>
-    <div class="review" id="r1">
-      <p class="name">Aman Baba Dear</p>
-      <br>
-      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea quo minus
-        suscipit quas ab eveniet eligendi.</p>
-    </div>
-    <div class="review" id="r2">
-      <p class="name">Manish Pandey</p>
-      <br>
-      <p class="says">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere nobis fuga corrupti ea quo minus
-        suscipit quas ab eveniet eligendi.</p>
+    <div class="review" id="r4">
+      <div class="rev_des">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In tempore quod reiciendis eius dolorum quisquam minus
+        sapiente sint ipsum harum!
+      </div>
+      <div class="customer">
+        <p>Viper</p>
+        <img src="./p4.png" alt="">
+      </div>
     </div>
   </div>
   </details>
+  <br><br><br id="scroll5">
   <footer>
     <div class="container">
       <div class="sec aboutus">
@@ -261,7 +261,7 @@
     </div>
   </footer>
   <div class="copyrightText">
-    <p>Copyright @ 2021 Online Kitchen. All Rights Reserved.</p>
+    <p>Copyright &copy; 2021 Online Kitchen. All Rights Reserved.</p>
   </div>
   <section id="home">
 
